# LearningC

./: .gitignore  CMakeLists.txt  README.md
Ej1/: Ejercicio1.c  Ejercicio1.h
Ej2/: Ejercicio2.c  Ejercicio2.h
Ej3/: Ejercicio_3.c  Ejercicio_3.h
ElementsGenerator/: ListElements.txt  main.c
